tf/security_groups.tf
resource "aws_security_group" "emr_sg" {
  name        = "emr_sg"
  description = "Security group for EMR cluster"
  vpc_id      = "your-vpc-id"  # Cambia al ID de tu VPC

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8888
    to_port     = 8888
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "security_group_id" {
  value = aws_security_group.emr_sg.id
}
